    (Yonqqiang He via zshao)

    HIVE-74. Hive can use CombineFileInputFormat for when the input has many
    small files (Namit Jain via rmurthy)

    HIVE-827. Increase hive.mapjoin.cache.numrows default value.
    (Namit Jain via zshao)

    HIVE-855. UDF: Concat should accept multiple arguments.
    (Paul Yang via zshao)

    HIVE-914. Optimize UDFJson (Paul Yang via namit)
    
    HIVE-945. custom mappers/reducers should not be initialized at compile time (namit via He Yongqiang)

  OPTIMIZATIONS

  BUG FIXES

    HIVE-734. problem while inserting nulls. (Ning Zhang via namit)

    HIVE-769. Bug in partition pruner checking. (Zheng Shao via namit)

    HIVE-773. Remove lzocodec import from FileSinkOperator.
    (He Yongqiang via johan)

    HIVE-769. Bug in partition pruner checking - bug in patch.
    (Zheng Shao via namit)

    HIVE-782. Bug in reducer progress (Raghu Murthy via namit)

    HIVE-780. Better error messages for wrong argument lengths in UDAFs
    (Zheng Shao via namit)

    HIVE-790. race conditions with script and union operators
    (Ning Zhang via namit)

    HIVE-798. remove UDAFSum and UDAFCount
    (Zheng Shao via namit)

    HIVE-778. add describe for div
    (Ning Zhang via namit)

    HIVE-755. Driver NullPointerException when calling getResults without first compiling
    (Eric Hwang via namit)

    HIVE-752. Bug in shimLoader for HWI server (Edward Capriolo via namit)

    HIVE-810. add test and annotation for jdbc udf (Edward Capriolo via namit)

    HIVE-812. Hive compiled with ant package works with all supported hadoop versions
    (Zheng Shao via namit)

    HIVE-823. Make table alise in MAPJOIN hint case insensitive.
    (Namit Jain via zshao)

    HIVE-771. Code cleanup in QueryPlan (Emil Ibrishimov via namit)

    HIVE-838. In strict mode, remove error if no partition is selected.
    (Namit Jain via rmurthy)

    HIVE-841. Change deprecated Hadoop APIs in Context.java (Cyrus Katrak via namit)
