@@ -118,8 +118,10 @@ Trunk -  Unreleased
     (Paul Yang via zshao)
 
     HIVE-914. Optimize UDFJson (Paul Yang via namit)
-    
+
     HIVE-945. custom mappers/reducers should not be initialized at compile time (namit via He Yongqiang)
+
+    HIVE-947. runlength encding for RCFILE (He Yongqiang via namit)
 
   OPTIMIZATIONS
 
